# data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
sql/: init.sql
src/datapipeline/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_config.py
src/datapipeline/analytics/: reports.py  semantic_search.py
src/datapipeline/api/: deps.py  main.py
src/datapipeline/api/routes/: health.py  metrics.py
src/datapipeline/ingestion/: __init__.py  archive_loader.py  base.py  csv_loader.py  detector.py  excel_loader.py  json_loader.py  text_loader.py  unstructured_parser.py  xml_loader.py
src/datapipeline/pipeline/: orchestrator.py
src/datapipeline/storage/: __init__.py  database.py  orm_models.py  parquet_writer.py
src/datapipeline/transform/: normalize.py
src/datapipeline/validation/: models.py
tests/: conftest.py  test_api.py  test_archive_loader.py  test_cli.py  test_config.py  test_csv_loader.py  test_detector.py  test_excel_loader.py  test_json_loader.py  test_normalize.py  test_parquet_writer.py  test_pipeline.py  test_reports.py  test_semantic_search.py  test_storage.py  test_text_loader.py  test_unstructured_parser.py  test_validation.py  test_xml_loader.py
tests/fixtures/: sample.csv  sample.json  sample.ndjson  sample.xml
